# commitpulse

./: .gitignore  README.md  pyproject.toml
commitpulse/: __init__.py  analyzer.py  main.py  renderer.py
