[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "commitpulse"
version = "0.1.5"
description = "Premium Git repository analytics and dashboard generator"
authors = [
    { name = "Samuel Olubukun" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests>=2.31.0"
]

[project.urls]
Homepage = "https://github.com/samolubukun/commitpulse"
Repository = "https://github.com/samolubukun/commitpulse"
Issues = "https://github.com/samolubukun/commitpulse/issues"

[project.scripts]
commitpulse = "commitpulse.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["commitpulse*"]
